--- a/src/main/webapp/resources/css/community/write_board.css
+++ b/src/main/webapp/resources/css/community/write_board.css
@@ -163,3 +163,17 @@ input:checked + .slider:before {
 	justify-content: flex-end;
 	margin-top: 40px;
 }
+
+.bee {
+    margin-left: 10px;
+    width: 60px;
+    height: 60px;
+}
+
+#search_case {
+    width: 1130px;
+    height: 65px;
+    margin: 30px 0 9px 0;
+    display: flex;
+    justify-content: space-between;
+}
