--- a/src/main/webapp/resources/css/community/style2.css
+++ b/src/main/webapp/resources/css/community/style2.css
@@ -1,10 +1,17 @@
 /*공용 css임 절대 수정하면 안됨 */
 
+.bee {
+    margin-left: 10px;
+    width: 60px;
+    height: 60px;
+}
 
 #search_case {
-	display: flex;
-	height: 65px;
-	border: none;
+    width: 1130px;
+    height: 65px;
+    margin: 30px 0 9px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 #form_inner_top {
@@ -23,7 +30,11 @@ html, body {
 	justify-content: center;
 }
 
-
+.bee {
+    margin-left: 10px;
+    width: 60px;
+    height: 60px;
+}
 
 #search_case {
    width: 1130px;
@@ -34,8 +45,9 @@ html, body {
 }
 
 #search_case_inner_div_1 {
-   width: 200px;
-   margin-left: 50px;
+    width: 200px;
+    margin-left: 50px;
+    display: flex;
 }
 
 search_case_inner_div_1 > h3 {
