--- a/src/main/webapp/resources/css/community/search_page.css
+++ b/src/main/webapp/resources/css/community/search_page.css
@@ -1,10 +1,11 @@
 #index_body_container {
-	width: 1130px;
-	background-color: rgba(127, 127, 127, 0.06);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: 50px;
+    width: 1130px;
+    background-color: rgba(127, 127, 127, 0.06);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    border-radius: 20px;
 }
 
 /*footer는 view_board.html도 공용으로 사용할것*/
@@ -29,42 +30,50 @@
 }
 
 .tr_inner_container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 900px;
-	height: 120px;
-	border: 1px solid gray;
-	background-color: white;
-	border-radius: 7px;
-	margin-bottom: 20px;
+    width: 900px;
+    /* height: 90px; */
+    margin: 0 auto;
+    display: flex;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 7px;
+    flex-direction: column;
+    justify-content: space-around;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 
+
 .tr_inner_up_div {
-	display: flex;
-	width: 840px;
-	height: 60px;
-	border-bottom: 1px solid gray;
-	margin-top: 10px;
+    display: flex;
+    width: 840px;
+    border-bottom: 1px solid lightgray;
+    margin: 0 auto;
+    background-color: white;
+    line-height: 2;
+    justify-content: space-between;
 }
 
 .tr_inner_under_div {
 	display: flex;
-	justify-content: center;
 	width: 840px;
-	height: 60px;
-	margin: 10px 0 0 10px;
+	margin: 0 auto;
+	border: solid transparent;
+	line-height: 2;
 }
 
 .board_kinds {
-	margin: 10px 10px 0 10px;
+    margin: 12px 10px 0 10px;
+    width: 35px;
+    color: #ffc760;
+    font-weight: bold;
 }
 
 .board_title {
-	width: 540px;
-	margin: 5px 20px 0 10px; 
-	font-size: 25px;
-	color: navy;
+    height: 30px;
+    margin: 12px 10px 0 10px;
+    font-weight: bold;
+    color: #232338;
 }
 
 .board_writer {
@@ -75,17 +84,19 @@
 	margin: 10px 10px 0 10px;
 }
 
+.id_wrap {
+    color: #454545;
+    font-weight: bold;
+}
+
 .board_view_cnt {
 	margin: 10px 10px 0 10px;
 }
 
 .tr_inner_under_div_contents {
-	display: block;
-	width: 840px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	
+    /* height: 37px; */
+    border: solid transparent;
+    color: gray;
 }
 
 #result_letter {
@@ -156,4 +167,41 @@
 
 .page>div>span{
 	margin-right: 20px;
+}
+
+.bee {
+    margin-left: 10px;
+    width: 60px;
+    height: 60px;
+}
+
+#search_case {
+    width: 1130px;
+    height: 65px;
+    margin: 30px 0 9px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.title_wrap {
+    display: flex;
+}
+
+
+#search_case_inner_div_3 input {
+    width: 250px;
+    height: 30px;
+    font-size: 13px;
+    border-radius: 7px;
+    border: solid 2px lightgray;
+}
+
+#search_case_inner_div_3 select {
+    width: 110px;
+    height: 35px;
+    font-size: 13px;
+    border-radius: 7px;
+    margin: 0 10px 0 100px;
+    border: solid 2px lightgray;
+    cursor: pointer;
 }
