--- a/src/main/webapp/resources/css/community/style.css
+++ b/src/main/webapp/resources/css/community/style.css
@@ -39,19 +39,22 @@ html, body {
 	margin: 20px;
 }
 
-#search_case_inner_div_3 select{
-	width: 110px;
-	height: 35px;
-	font-size: 13px;
-	border-radius: 4px;
-	margin: 0 10px 0 100px;
+#search_case_inner_div_3 select {
+    width: 110px;
+    height: 35px;
+    font-size: 13px;
+    border-radius: 7px;
+    margin: 0 10px 0 100px;
+    border: 2px solid lightgray;
+    cursor: pointer;
 }
 
-#search_case_inner_div_3 input{
-	width: 250px;
-	height: 30px;
-	font-size: 13px;
-	border-radius: 4px;
+#search_case_inner_div_3 input {
+    width: 250px;
+    height: 30px;
+    font-size: 13px;
+    border-radius: 7px;
+    border: 2px solid lightgray;
 }
 
 #search{
