--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -378,15 +378,13 @@ html, body{
 	background-color: #f2f2f2;
 }
 
-.help_div{
-	margin-top: 77px;
-	width: 1000px;
-	height: 350px;
-	border: thin;
-	border-color: black;
-	border-style: solid;
-	border-radius: 30px;
-	background-color: white;
+.help_div {
+    margin-top: 77px;
+    width: 1000px;
+    height: 350px;
+    border: solid lightgray;
+    border-radius: 30px;
+    background-color: white;
 }
 
 .title_list{
@@ -394,18 +392,17 @@ html, body{
 	justify-content: space-between;
 }
 
-.join_div{
-	display: flex;
-	width: 400px;
-	margin-left: 10px;
-	margin-right: 100px;
+.join_div {
+    display: flex;
+    width: 400px;
+    margin-left: 30px;
+    margin-right: 100px;
 }
 
-.review_div{
-	display: flex;
-	width: 400px;
-	margin-right: 150px;
-	
+.review_div {
+    display: flex;
+    width: 400px;
+    margin-right: 90px;
 }
 
 .request_view{
@@ -565,18 +562,15 @@ html, body{
 	margin: 40px 0 0 10px;
 }
 
-.comu_body{
-	display: flex;
-	justify-content: space-around;
-	margin: 40px 0 30px 50px;
-	width: 1000px;
-	height: 400px;
-	border: thin;
-	border-color: silver;
-	border-style: solid;
-	border-width: 2px;
-	border-radius: 30px;
-	background-color: white;
+.comu_body {
+    display: flex;
+    justify-content: space-around;
+    margin: 40px 0 30px 50px;
+    width: 1000px;
+    height: 400px;
+    border: solid lightgray;
+    border-radius: 30px;
+    background-color: white;
 }
 
 .comu_body>div{
