--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -41,19 +41,21 @@ html, body{
 	color: gray;
 }
 
-.login_btn{
-	font-size: 22px;
-	font-weight: bold;
-	color: orange;
-	cursor: pointer;
+.login_btn {
+    font-size: 22px;
+    font-weight: bold;
+    color: orange;
+    cursor: pointer;
+    margin-right: 15px;
 }
 
 .join_btn {
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
-    margin-right: 10px;
+    margin-right: 18px;
     margin-top: 2.3px;
+    color: #01042e;
 }
 
 .logout{
@@ -64,6 +66,7 @@ html, body{
 	display: flex;
 	margin-left: 62px;
 	justify-content: flex-start;
+	color: #2e2e2e;
 }
 
 .cate_wrap>div{
@@ -370,21 +373,24 @@ html, body{
 }
 
 
-.help_section{
-	height: 540px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #f2f2f2;
+.help_section {
+    height: 540px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f2f2f2;
+    margin-top: 28px;
+    border-radius: 30px;
 }
 
 .help_div {
-    margin-top: 77px;
+    margin-top: 60px;
     width: 1000px;
-    height: 350px;
+    height: 410px;
     border: solid lightgray;
     border-radius: 30px;
     background-color: white;
+    position: relative;
 }
 
 .title_list{
@@ -397,19 +403,22 @@ html, body{
     width: 400px;
     margin-left: 30px;
     margin-right: 100px;
+    color: #2e2e2e;
 }
 
 .review_div {
     display: flex;
     width: 400px;
     margin-right: 90px;
+    color: #2e2e2e;
 }
 
-.request_view{
+.request_view {
     width: 100px;
     position: relative;
-    top: 62px;
+    top: 20px;
     left: 495px;
+    color: #2e2e2e;
 }
 
 .request_view>i{
@@ -425,25 +434,29 @@ html, body{
 	font-size: 22px;
 	font-weight: bold;
 	margin: 40px 0 0 10px;
-	
+	color: #2e2e2e;
 }
 
 .content_list{
 	display: flex;
 	justify-content: space-around;
 	margin-top: 50px;
+	color: #2e2e2e;
+	font-weight: bold;
 }
 
 .join_content{
 	display: flex;
 	flex-direction: column;
 	margin-left: 20px;
+	font-weight: bold;
 }
 
 .review_content{
 	display: flex;
 	flex-direction: column;
 	margin-left: 70px;
+	font-weight: bold;
 }
 
 .content{
@@ -455,6 +468,7 @@ html, body{
 
 .content_title{
 	width: 250px;
+	display: flex;
 }
 
 .content_loc{
@@ -478,6 +492,7 @@ html, body{
 	width: 1100px;
 	height: 600px;
 	text-align: center;
+	color: #2e2e2e;
 }
 
 .buy_title{
@@ -485,6 +500,7 @@ html, body{
 	width: 400px;
 	margin-left: 10px;
 	margin-right: 100px;
+	color: #2e2e2e;
 }
 
 .buy_name{
@@ -518,10 +534,12 @@ html, body{
 	cursor: pointer;
 }
 
-.buy_label{
-	margin-top: 30px;
-	margin-right: 50px;
-	margin-bottom: 30px;
+.buy_label {
+    margin-top: 30px;
+    margin-right: 50px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    color: #2e2e2e;
 }
 
 .detail_view{
@@ -535,11 +553,12 @@ html, body{
 	cursor: pointer;
 }
 
-.comu_section{
-	display: flex;
-	justify-content: center;
-	height: 600px;
-	background-color: #f2f2f2;
+.comu_section {
+    display: flex;
+    justify-content: center;
+    height: 600px;
+    background-color: #f2f2f2;
+    border-radius: 30px;
 }
 
 .comu_div{
@@ -547,6 +566,7 @@ html, body{
 	width: 1100px;
 	height: 600px;
 	text-align: center;
+	color: #2e2e2e;
 }
 
 .comu_title{
@@ -554,6 +574,7 @@ html, body{
 	width: 400px;
 	margin-left: 10px;
 	margin-right: 100px;
+	color: #2e2e2e;
 }
 
 .comu_name{
@@ -564,23 +585,23 @@ html, body{
 
 .comu_body {
     display: flex;
-    justify-content: space-around;
-    margin: 40px 0 30px 50px;
-    width: 1000px;
+    justify-content: space-evenly;
+    margin: auto;
+    margin-top: 20px;
+    width: 1045px;
     height: 400px;
     border: solid lightgray;
     border-radius: 30px;
     background-color: white;
 }
 
-.comu_body>div{
-	width: 225px;
-	height: 235px;
-	margin-top: 80px;
-	box-shadow: 2px 2px 2px 2px gray;
-	border-color: black;
-	border-style: hidden;
-	border-radius: 50px;
+.comu_body>div {
+    width: 225px;
+    height: 235px;
+    margin-top: 80px;
+    box-shadow: 4px 4px 4px 0px #808080ab;
+    border-style: hidden;
+    border-radius: 50px;
 }
 
 .comu_view{
@@ -626,15 +647,16 @@ html, body{
 	font-size: 30px;
 }
 
-.child_list>div{
-	font-size: 16px;
-	margin-bottom: 20px;
-	cursor: pointer;
-	overflow: hidden;
+.child_list>div {
+    font-size: 16px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    overflow: hidden;
+    font-weight: bold;
 }
 
 .child_list>div:hover{
-	color: blue;
+	color: gray;
 }
 
 .footer{
@@ -683,3 +705,20 @@ html, body{
     stroke-width: 5px;
 }
 
+.new_btn {
+    border: none;
+    border-radius: 15px;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.line {
+    width: 0px;
+    height: 390px;
+    position: absolute;
+    border-right: dashed #d3d3d3b0 3.8px;
+    left: 479px;
+    top: 10px;
+}
