[12.03 구현] 소통해협 overflow, 비밀글 안보이게 수정

--- a/src/main/webapp/resources/css/community/index_css.css
+++ b/src/main/webapp/resources/css/community/index_css.css
@@ -99,6 +99,9 @@
     height: 37px;
     border: solid transparent;
     color: gray;
+    overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .board_kinds, .board_title, .board_writer, .board_date, .board_view_cnt
