[12.03 현수] 메인페이지 해협리스트 예외처리

--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -469,6 +469,8 @@ html, body{
 .content_title{
 	width: 250px;
 	display: flex;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .content_loc{
