--- a/src/main/webapp/resources/css/admin/finish-list.css
+++ b/src/main/webapp/resources/css/admin/finish-list.css
@@ -12,25 +12,25 @@
 }
 
 .join_list{
+   margin: 80px 0 20px 0;
    border: none;
-   padding-left: 10px;
+   padding-left: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
-   margin: 80px 0 20px 0;
-   height: 80px;
-   width: 170px;
-   font-size: 28px;
+   height: 60px;
+   width: 130px;
+   font-size: 25px;
    color: white;
    font-weight: bold;
    box-shadow: 0px 10px 10px #808080;
    text-shadow: 2px 2px 5px #808080;
-   border-bottom-right-radius: 20px;
-   border-top-right-radius: 20px;
-   background-color: rgba(52, 73, 94, 0.33);
+   border-bottom-right-radius: 15px;
+   border-top-right-radius: 15px;
+   background-color: rgba(52, 73, 94, 0.98);
 }
 
-.join_list:hover{
+.finished_list:hover{
     box-shadow: inset 0 0 5px 1px #808080;
 }
 
@@ -54,25 +54,25 @@
 }
 
 .finished_list{
+   margin: 30px 0 0 0;
    border: none;
-   padding-left: 8px;
+   padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
-   margin: 30px 0 0 0;
-   height: 60px;
-   width: 130px;
-   font-size: 25px;
+   height: 80px;
+   width: 170px;
+   font-size: 28px;
    color: white;
    font-weight: bold;
    box-shadow: 0px 10px 10px #808080;
    text-shadow: 2px 2px 5px #808080;
-   border-bottom-right-radius: 15px;
-   border-top-right-radius: 15px;
-   background-color: rgba(52, 73, 94, 0.98);
+   border-bottom-right-radius: 20px;
+   border-top-right-radius: 20px;
+   background-color: rgba(52, 73, 94, 0.33);
 }
 
-.revision_list:hover, .finished_list:hover{
+.revision_list:hover, .join_list:hover{
     box-shadow: inset 0 0 5px 1px #243342;
 }
 
