--- a/src/main/webapp/resources/css/management/myIcebox_cart.css
+++ b/src/main/webapp/resources/css/management/myIcebox_cart.css
@@ -140,7 +140,7 @@ html, body {
 	font-size: 20px;
 	text-align: center;
 	margin-top: 20px;
-	margin-right: 10px;
+	right: 26px;
 }
 
 .bell_cnt:hover{
@@ -148,6 +148,47 @@ html, body {
     background-color: rgb(87, 153, 167);
 	border-color: rgb(87, 153, 167);
 	box-shadow: 0 0 0 0.25rem rgba(211, 212, 213, 0.5);
+}
+
+.bell_title{
+	display: flex;
+	margin-left: 30px;
+	margin-top: 25px;
+	font-size: 22px;
+	padding-bottom: 10px;
+}
+
+.bell_txt_wrap{
+	display: flex;
+	flex-direction: column;
+	border-bottom: solid thin darkgray;
+	width:380px;
+	margin: auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.bell_txt{
+	font-weight: bold;
+	font-size: 18px;
+	margin-left: 10px;
+	margin-bottom: 7px;
+	display: flex;
+}
+
+.bell_title_wrap{
+	display: flex;
+}
+
+.bell_cancel{
+	margin-top: 20px;
+	margin-left: 310px;
+	font-size: 30px;
+	cursor: pointer;
+}
+
+.bell_cancel:hover{
+	color: red;
 }
 
 .main2{
@@ -394,24 +435,13 @@ html, body {
 	display: flex;
 }
 
-.bell_cancel{
-	margin-top: 20px;
-	margin-left: 150px;
-	font-size: 30px;
-	cursor: pointer;
-}
-
-.bell_cancel:hover{
-	color: red;
-}
-
-
 .cart{
 	position: absolute;
 	font-size: 60px;
 	margin-left: 990px;
 	margin-top: 120px;
 	cursor: pointer;
+	color: darkgreen;
 }
 
 .cart_cnt{
