[12.06 현수] 메인페이지 css 수정

--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -655,6 +655,9 @@ html, body{
     cursor: pointer;
     overflow: hidden;
     font-weight: bold;
+    width: 200px;
+    height: 20px;
+    margin-left: 10px;
 }
 
 .child_list>div:hover{
