[12.07 구현] 마진값

--- a/src/main/webapp/resources/css/community/view_board.css
+++ b/src/main/webapp/resources/css/community/view_board.css
@@ -352,6 +352,7 @@ i.fas.fa-reply {
     flex-direction: row;
     justify-content: revert;
     align-self: center;
+    margin-bottom: 12px;
 }
 
 #modify{
