[12.10 륜수] 소통해협 대댓글 수정기능 (으아아아아아아아)

--- a/src/main/webapp/resources/css/community/view_board.css
+++ b/src/main/webapp/resources/css/community/view_board.css
@@ -120,6 +120,13 @@ div#view_comments2 {
     font-size: 18px;
 }
 
+.reReply_content {
+    width: 524px;
+    margin-right: 10px;
+    align-self: center;
+    font-size: 18px;
+}
+
 #comment_item {
     display: flex;
     width: 1053px;
